--- a/src/app.css
+++ b/src/app.css
@@ -1,45 +1,49 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import '@fontsource/fira-code';
+@import '@fontsource/outfit';
+@import 'tailwindcss';
 
 @layer base {
-  body {
-    @apply bg-stone-900 text-stone-100;
-  }
+	body {
+		@apply bg-stone-900 text-stone-100;
+	}
 
-  ::selection {
-    @apply bg-amber-400 text-stone-900;
-  }
+	::selection {
+		@apply bg-amber-400 text-stone-900;
+	}
 
-  h1 {
-    @apply my-8 text-6xl font-bold;
-  }
+	h1 {
+		@apply my-8 text-6xl font-bold;
+	}
 
-  h2 {
-    @apply my-4 text-4xl font-bold;
-  }
+	h2 {
+		@apply my-4 text-4xl font-bold;
+	}
 
-  p {
-    @apply my-2 text-center text-base;
-  }
+	p {
+		@apply my-2 text-center text-base;
+	}
 
-  a {
-    @apply px-1 text-amber-400 hover:bg-amber-400 hover:text-stone-800;
-  }
+	a {
+		@apply px-1 text-amber-400 hover:bg-amber-400 hover:text-stone-800;
+	}
 
-  a:has(> img, > svg) {
-    @apply p-0 hover:bg-transparent;
-  }
+	a:has(> img, > svg) {
+		@apply p-0 hover:bg-transparent;
+	}
 
-  ul {
-    @apply list-disc marker:text-stone-100;
-  }
+	ul {
+		@apply list-disc marker:text-stone-100;
+	}
 
-  code {
-    @apply font-mono;
-  }
+	code {
+		@apply font-mono;
+	}
 
-  .min-h-mobile {
-    min-height: 90vh;
-  }
+	.min-h-mobile {
+		min-height: 90vh;
+	}
+}
+@theme {
+	--font-sans: 'Outfit Variable', sans-serif;
+	--font-mono: 'Fira Mono', monospace;
 }
